@@ -1,4 +1,4 @@
-/* ImageParser.java - parser of wiki references &lt;ref>...&lt;/ref>
+/* ReferenceParser.java - parser of wiki references &lt;ref>...&lt;/ref>
  * 
  * Copyright (c) 2005-2008 Andrew Krizhanovsky /aka at mail.iias.spb.su/
  * Distributed under GNU Public License.
@@ -15,7 +15,7 @@ import java.util.regex.Matcher;
  */
 public class ReferenceParser {
     
-    //private final static Pattern ptrn_ref               = Pattern.compile("<ref>");
+    //private final static Pattern ptrn_ref             = Pattern.compile("<ref>");
     private final static Pattern ptrn_ref_boundaries    = Pattern.compile("<ref>(.+?)</ref>");
     
     private final static Pattern ptrn_http_url  = Pattern.compile("\\bhttp://.+?(\\s|$)");
@@ -43,7 +43,6 @@ public class ReferenceParser {
      * If the reference contains a template, e.g. &lt;ref>{{cite book |..&lt;/ref>
      * then the whole reference will be deleted.
      */ 
-    //expandReferenceToEndOfText() {
     public static StringBuffer expandMoveToEndOfText(StringBuffer text)
     {
         if(null == text || 0 == text.length()) {
@@ -76,8 +75,41 @@ public class ReferenceParser {
         }
         
         return text;
-
     }
 
-    
+    /** Removes refences from the text.
+     */
+    public static StringBuffer remove(StringBuffer text)
+    {
+        if(null == text || 0 == text.length()) {
+            return NULL_STRINGBUFFER;
+        }
+
+        //Matcher m = ptrn_ref_boundaries.matcher(StringUtil.escapeCharDollarAndBackslash(text.toString()));
+        Matcher m = ptrn_ref_boundaries.matcher(text.toString());
+
+        boolean bfound = m.find();
+        if(bfound) {
+            StringBuffer result = new StringBuffer();
+            StringBuffer eo_text = new StringBuffer();  // end of text
+            while(bfound) {
+                                                                   // group(1) := text within <ref>reference boundaries</ref>
+                StringBuffer sb = WikiParser.parseCurlyBrackets(
+                            StringUtil.escapeCharDollarAndBackslash(m.group(1) ));
+                sb = removeHTTPURL(sb);
+
+                eo_text.append( sb );
+                m.appendReplacement(result, "");
+                bfound = m.find();
+            }
+            m.appendTail(result);
+            if(eo_text.length() > 0) {
+                result.append("\n\n");
+                result.append(eo_text);
+            }
+            return result;
+        }
+
+        return text;
+    }
 }
